corpus/cpp/access_control/case-01/snapshots/gcc15_plus/dual_sink_structured/render.default.txt
error: access to private or protected member
--> src/main.cpp:8:20
help: use a public interface, add a friend declaration, or change access specifier
why: 'int Counter::value' is private within this context
| src/main.cpp:8:20
|     return counter.value;
|                    ^
note: declared private here
raw: rerun with --formed-profile=raw_fallback to inspect the original compiler output